# pairpal-project

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  User_8hpp_source.html  annotated.html  api_2message_8hpp_source.html  chat_2message_8hpp_source.html  chat_8hpp_source.html  classChat-members.html  classChat.html  classClient-members.html  classClient.html  classDialog-members.html  classDialog.html  classGateway-members.html  classGateway.html  classMessage-members.html  classMessage.html  classMessage__store-members.html  classMessage__store.html  classNetworkMessage-members.html  classNetworkMessage.html  classPair-members.html  classPair.html  classServer-members.html  classServer.html  classStorage-members.html  classStorage.html  classUser-members.html  classUser.html  classes.html  classmessage__store-members.html  classmessage__store.html  classuser-members.html  classuser.html  client_8hpp_source.html  dialog_8hpp_source.html  dir_10c4b6c82fc10842946a7a1b393caac8.html  (+22 more)
.github/workflows/: cmake.yml  cmake.yml.disable  docs.yml
include/api/: client.hpp  gateway.hpp  message.hpp  network_message.hpp  server.hpp
include/chat/: chat.hpp  dialog.hpp  message.hpp  message_store.hpp
include/pair/: pair.hpp
include/storage/: User.hpp  message_store.hpp  storage.hpp  user.hpp
include/ui/: dialog.h  pairpal.h  registerpage.h  ui.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  related_0.js  searchdata.js
src/: backend.cpp  frontend.cpp
src/api/: client.cpp  gateway.cpp  message.cpp  network_message.cpp  server.cpp
src/chat/: chat.cpp  dialog.cpp  message.cpp  message_store.cpp
src/frontend/: chat.cpp  chat.h  chat.ui  dialog.cpp  dialog.h  dialog.ui  eat.cpp  eat.h  eat.ui  list.cpp  list.h  list.ui  main.cpp  messagelist.ui  page1.pro  page1_zh_CN.ts  pairpal.cpp  pairpal.h  pairpal.ui  play.cpp  play.h  play.ui  qq03.cpp  qq03.h  qq03.ui  registerpage.cpp  registerpage.h  registerpage.ui  self.cpp  self.h  self.ui  sport.cpp  sport.h  sport.ui  study.cpp  study.h  study.ui  ui.cpp  ui.h
src/pair/: pair.cpp
src/storage/: message_store.cpp  storage.cpp  user.cpp
src/ui/: dialog.cpp  dialog.ui  eat.cpp  eat.ui  main.cpp  page1.pro  pairpal.cpp  pairpal.h  play.cpp  play.h  registerpage.cpp  registerpage.h  registerpage.ui  self.cpp  self.h  sport.cpp  sport.h  sport.ui  study.cpp  study.h  ui.cpp
test/Chat_test/: chat-test.cpp
test/Storage_test/: s-test.cpp
test/api/: test-client.cpp  test-message.cpp  test-network_message.cpp  test-server.cpp
test/chat/: test-chat.cpp
test/pair/: test-pair.cpp
test/storage/: test-storage.cpp
